tests/negative/gold/incomplete_multi_string_test.gold
tests/negative/incomplete_multi_string_test.toit:4:5: error: Unterminated string
    """\
    ^~~~
tests/negative/incomplete_multi_string_test.toit:4:5: error: Invalid string: '\'

    """\
    ^~~~
Compilation failed.
